# ShellGate

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: e2e.yml  release.yml
.opencode/commands/: opsx-arrange.md  opsx-refine.md
.opencode/skills/opsx-arrange/: SKILL.md
.opencode/skills/opsx-deliberate/references/: workflow-design.md
.opencode/skills/opsx-refine/: SKILL.md
.opencode/skills/opsx-refine/references/: analysis-prompt.md  classification-rules.md  review-criteria.md  workflow-design.md
devcontainer-feature/: devcontainer-feature.json  install.sh
docs/superpowers/specs/: 2026-05-07-pipeline-integration-tests-design.md
openspec/: opsx-deliberate.json  opsx-refine.json
openspec/changes/ai-gatekeeper/: design.md  proposal.md  tasks.md
openspec/changes/gatekeeper/: dependency-tree.md  design.md  proposal.md  tasks.md
openspec/changes/gatekeeper/specs/gate-mcp/: spec.md
openspec/changes/gatekeeper/specs/gate-permissions/: spec.md
openspec/changes/gatekeeper/specs/gate-server/: spec.md
openspec/changes/gatekeeper/specs/gate-shell/: spec.md
openspec/changes/gatekeeper/specs/gate-telegram/: spec.md
openspec/changes/gatekeeper/specs/gate-web/: spec.md
src/: agenda.rs  api.rs  approvals.rs  audit.rs  bonsai.rs  bootstrap.rs  classifier.rs  config.rs  derived_grants.rs  grants.rs  handler.rs  lib.rs  llm_client.rs  main.rs  mcp.rs  permissions.rs  pipeline.rs  prompts.rs  protocol.rs  proxy.rs  schema.rs  seccomp_gate.rs  server.rs  session.rs  sgsh-connect.rs  telegram.rs  tokens.rs  types.rs  watcher.rs
src/stages/: allow_list.rs  catch_list.rs  human.rs  llm.rs  mod.rs
tests/: e2e.rs  pipeline_integration.rs  proof-records-e2e.md  test_client.py
tests/probes/: allow-list.test.ts  api.test.ts  approval-workflow.test.ts  audit-logging.test.ts  catch-list.test.ts  cross-cutting.test.ts  gate-adapter.ts  gate-pipeline.test.ts  grant-crud.test.ts  llm-deliberation.test.ts  log-only.test.ts  package.json  permissions.test.ts  probes-context.ts  probes.yml  proof-helper.ts  proof-records.md  shared.fixture.yaml  start-gate.sh
