[package]
name = "gate-server"
version = "0.1.0-alpha.1"
edition = "2021"
description = "AI agent shell command gateway with seccomp-based kernel enforcement"

[lib]
name = "gate_server"
path = "src/lib.rs"

[[bin]]
name = "gate-server"
path = "src/main.rs"

[[bin]]
name = "sgsh-connect"
path = "src/sgsh-connect.rs"

[features]
default = ["seccomp"]
seccomp = ["libseccomp"]
e2e = []

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
globset = "0.4"
teloxide = { version = "0.14", default-features = false, features = ["macros", "rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = "0.1"
futures = "0.3"
libseccomp = { version = "0.4", optional = true }
inotify = "0.11"
libc = "0.2"
nix = { version = "0.30", features = ["socket", "ioctl", "sched"] }

[dev-dependencies]
tempfile = "3"
